# preference-based-cp

./: README.md  beispiel.fdb_latexmk  beispiel.fls  cal_size_db.db  emissions.csv  inspection.ipynb  jonas_test.db  learning_ncs_trochcp_copy.ipynb  playground.ipynb  pyproject.toml  ranking_resnet.py  replicating_ncs.csv  requirements.txt  results_synthetic.csv  results_synthetic_sparse.csv  simple_model.py  synthetic_clf_vs_prf.ipynb
conformal/: conformal.py
experiments/: .codecarbon.config  cal_set_size_table.ipynb  cifar10_experiment copy.py  cifar10h_experiment.py  classifier_finetuner cifar100.py  classifier_finetuner_cifar10.py  cp_debug.db  cp_experimenter.py  cp_rank_experimenter.py  emissions.csv  evaluation simple.ipynb  evaluation.ipynb  example_experiment.py  jonas_test.db  ranker_finteuner_cifar10.py  ranker_finteuner_cifar100.py  simple_experiment.py  simple_experiment_torchcp.py
models/: classifier_model.py  classifier_resnet.py  ranking_models.py  ranking_resnet.py  simple_model.py
notebooks/: aps_example_1d.ipynb  cal_set_size_table.ipynb  cifar10h.ipynb  cifar_tables.ipynb  clip_example cifar100.ipynb  clip_example.ipynb  clip_example_cifar10.ipynb  clip_example_cifar100.ipynb  evaluation_classification.ipynb  gaussian_plots.ipynb  inspection.ipynb  learning_conformity_scores dyadic.ipynb  learning_conformity_scores.ipynb  learning_ncs.ipynb  learning_ncs_trochcp.ipynb  learning_ncs_trochcp_copy.ipynb  ncs_example_1d.ipynb  openml_table.ipynb  playground.ipynb  plot_learning_ncs.ipynb  plots_synth.ipynb  snli.ipynb  synthetic_clf_vs_prf.ipynb  (+5 more)
(+6 files in other folders)
