[tool.poetry]
name = "cp-via-ranking"
version = "0.1.0"
description = "This project is concerned with conformal prediction via ranking"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
mapie = "^0.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
